--- a/_posts/2024-12-06-memoir.md
+++ b/_posts/2024-12-06-memoir.md
@@ -34,7 +34,7 @@ excerpt_separator: <!--more-->
 이렇게 생각하면서 내가 이것들에 대해 얼마나 신경을 쓰고 있는지 그리고 코드에 얼마나 녹여낼 수 있는 지 생각해보았다.
 그리고 이러한 생각들을 가지고 코드를 작성하면서 코드에 대한 이해와 코드에 대한 사고를 더욱 높이고 싶다고 생각한다.
 
-차후에 있는 데이터베이스 스터디 전까지 이번 자바 스터디 내용을 다듬어 정리하고 이펙티브 자바와 디자인 패턴에 관한 책을 읽고자 한다.
+차후에 있는 데이터베이스 스터디 전까지 이번 자바 스터디 내용을 다듬어 정리하고 이펙티브 자바라는 책을 읽고자 한다.
 
 글을 작성하면서 생각나는 말귀가 있어 해당 말귀를 인용을 하며 글을 마무리 하겠다.
 오늘보다 나은 내일을 위해 점진적으로 전진해라. 열심히 하는 것이 아닌 그냥 하는 것 자체가 중요하다.
