add(post): Add post > java > java enum

--- a/_posts/2024-12-28-java-enum.md
+++ b/_posts/2024-12-28-java-enum.md
@@ -42,37 +42,8 @@ public class DiscountService {
 회원 등급 외 다른 값이 입력되면 가격을 그대로 반환한다. 이 경우 할인율이 0%이므로 가격 그대로 반환하는 것이다.
 상황을 단순화하기 위해 회원 등급에 `null`은 입력되지 않는다고 가정한다.
 
-이제 `DiscountService` 클래스를 테스트하는 코드를 작성해보자.
-
-```java
-public class Main {
-    public static void main(String[] args) {
-        int price = 10000;
-        
-        DiscountService discountService = new DiscountService();
-     
-        int basic = discountService.discount("BASIC", price);
-        int gold = discountService.discount("GOLD", price);
-        int diamond = discountService.discount("DIAMOND", price);
-
-        System.out.println("BASIC 등급의 할인 금액: " + basic);
-        System.out.println("GOLD 등급의 할인 금액: " + gold);
-        System.out.println("DIAMOND 등급의 할인 금액: " + diamond);
-    }
-}
-```
-
-위 코드를 실행하면 다음과 같은 결과가 출력된다.
-
-```java
-BASIC 등급의 할인 금액: 1000
-GOLD 등급의 할인 금액: 2000
-DIAMOND 등급의 할인 금액: 3000
-```
-
-실행 결과를 보면 의도대로 회원 등급에 맞는 할인이 적용된 것을 확인할 수 있다.
-하지만 지금과 같이 단순히 문자열을 사용하여 회원 등급을 구분하는 방식은 문제점이 있다.
-그것은 바로 오타가 발생하기 쉽고, 유효하지 않는 값이 입력될 수 있다는 것이다.
+지금과 같이 단순히 문자열을 사용하여 회원 등급을 구분하는 방식은 문제점이 있다.
+오타가 발생하기 쉽고, 유효하지 않는 값이 입력될 수 있다는 것이다.
 
 이것 또한 코드를 구현해가며 확인해보자.
 
