--- a/_posts/2024-12-28-java-enum.md
+++ b/_posts/2024-12-28-java-enum.md
@@ -155,10 +155,11 @@ public int discount(String grade, int price) {}
 ```
 이렇게 되면 `discount()` 메서드를 사용하는 개발자가 `Grade` 클래스에 정의된 상수만 사용해야 한다는 것을 알 수 없다.
 주석을 남기거나 해서 알려줄 수 있지만, 이러한 방법은 개발자가 주석을 읽고 이해해야 하고 주석을 잊어버리고 직접 문자열을 입력할 수 있다.
+이렇게 문자열 상수를 사용하는 방법 또한 문제점이 많다.
 
 ## Type-Safe Enum Pattern
-이렇게 문자열 상수를 사용하는 방법 또한 문제점이 많다.
-많은 개발자들도 이러한 문제점을 해결하기 위해 오랜기간 고민을 해왔고, 이를 해결하기 위해 나온 결과가 타입 안전 열거형 패턴(Type-Safe Enum Pattern)이다.
+많은 개발자들도 이러한 문제점을 해결하기 위해 오랜기간 고민을 해왔고, 
+이를 해결하기 위해 나온 결과가 타입 안전 열거형 패턴(Type-Safe Enum Pattern)이다.
 
 여기서 `Enum`은 `Enumeration`의 줄임말로 번역하면 열거라는 뜻이다.
 즉, 어떤 것을 나열한 것을 뜻한다.
@@ -180,7 +181,7 @@ public class Grade {
 각각을 상수로 선언하기 위해 `static`과 `final` 키워드를 사용하였다.
 이때 각각의 상수마다 별도의 인스턴스를 생성하고, 생성한 인스턴스를 상수에 할당하였다.
 
-![Enum Instance](https://raw.githubusercontent.com/023-dev/023-dev.github.io/refs/heads/main/_posts/_images/java-identity-equality/java-enum_1.png){: width="500" }
+![Enum Instance](https://raw.githubusercontent.com/023-dev/023-dev.github.io/refs/heads/main/_posts/_images/java-enum/java-enum_1.png){: width="500" }
 
 코드를 통해 확실한 이해를 해보도록 하겠다.
 
@@ -340,25 +341,77 @@ public class Grade extends Enum {
 ```
 
 열거형도 클래스이다. 
-또한 자동으로 `java.lang.Enum` 클래스를 상속받기 때문에 `Enum` 클래스의 메서드를 사용할 수 있다.
+또한 자동(강제)으로 `java.lang.Enum` 클래스를 상속받기 때문에 `Enum` 클래스의 메서드를 사용할 수 있다.
 그리고 `Enum` 클래스는 `private` 생성자를 가지고 있기에 외부에서 인스턴스를 생성할 수 없다.
+생성할 경우 `enum classes may not be instantiated`라는 에러 메시지를 뱉어내며, 컴파일 에러가 발생하게 된다.
 
-이제 `main()` 메서드를 수정하여 `Enum` 타입을 사용하도록 코드를 수정해보자.
+이러한 열거형은 사전에 정의된 값만 사용할 수 있기에 타입 안전성을 보장한다. 
+그리고 열거형을 사용하면 `static import`와 `switch`를 적절하게 사용할 수도 있고, 이로 인해 코드가 간결해지고 명확해져 가독성이 좋아진다.
+또한 데이터 일관성도 보장할 수 있게 된다.
+만일 새로운 타입을 추가하거나 삭제하려면 `Grade` 열거형에만 추가하거나 삭제하면 되기에 확장성 측면에서도 좋다.
+
+
+### Enum Type의 메서드
+앞서 열거형도 클래스라고 했다.
+그 말은 즉, 열거형 클래스가 제공하는 메서드들을 사용할 수 있다는 것이다.
+
+주요 메서드는 다음과 같다.
+- `values()`: 열거형의 모든 상수를 배열에 담아 반환한다.
+- `valueOf(String name)`: 지정된 이름(name)과 일치하는 열거형 상수를 반환한다.
+- `name()`: 열거형 상수의 이름을 문자열로 반환한다.
+- `ordinal()`: 열거형 상수가 정의된 순서를 반환한다.
+- `toString()`: 열거형 상수의 이름을 문자열로 반환한다.
+
+하지만 여기서 `ordinal()` 메서드는 사용을 지양해야 한다.
+왜냐하면 이 값을 사용하다가 중간에 상수를 선언하는 위치가 변경되면 전체 상수의 순서가 변경되기 때문이다.
+
+### Enum Type 사용한 리팩토링
+이제 `Enum` 타입을 사용하여 `Grade` 클래스 코드를 리팩토링해보자.
+코드의 응집성을 위해 등급별 할인율과 할인 금액을 계산하는 코드를 `Grade` 열거형에 추가하고,
+`DiscountService` 클래스에서 `Grade` 열거형을 사용하도록 코드를 수정했다.
+
+
+```java
+public enum Grade {
+    BASIC(10), GOLD(20), DIAMOND(30);
+    
+    private final int discountPercent;
+    
+    Grade(int discountPercent) {
+        this.discountPercent = discountPercent;
+    }
+    
+    public int getDiscountPercent() {
+        return discountPercent;
+    }
+    
+    public int discount(int price) {
+        return price * discountPercent / 100;
+    }
+}
+```
+
+여기서 기존 `DiscountService` 클래스의 기능을 `Grade` 열거형에 추가하였다.
+더는 `DiscountService` 클래스에서 할인율을 계산하는 코드를 작성할 필요가 없어졌다.
+
+이제 `main` 메서드를 수정하여 `Grade` 열거형을 사용하도록하고 중복된 코드를 제거하는 방향으로 수정해보겠다.
 
 ```java
 public class Main {
     public static void main(String[] args) {
         int price = 10000;
         
-        DiscountService discountService = new DiscountService();
-     
-        int basic = discountService.discount(Grade.BASIC, price);
-        int gold = discountService.discount(Grade.GOLD, price);
-        int diamond = discountService.discount(Grade.DIAMOND, price);
-
-        System.out.println("BASIC 등급의 할인 금액: " + basic);
-        System.out.println("GOLD 등급의 할인 금액: " + gold);
-        System.out.println("DIAMOND 등급의 할인 금액: " + diamond);
+        Grade[] grades = Grade.values();
+        for (Grade grade : grades) {
+            printDiscount(grade, price);
+        }
+    }
+    
+    private static void printDiscount(Grade grade, int price) {
+        System.out.println(grade.name() + " 등급의 할인 금액: " + grade.discount(price));
     }
 }
-```   
+```
+
+이제 `main` 메서드에서는 `Grade` 열거형의 모든 상수를 배열로 가져와서 반복문을 통해 할인 금액을 출력하도록 수정하였다.
+이렇게 함으로써 중복된 코드를 제거하고, 코드의 응집성을 높일 수 있게 되었다.
