--- a/src/content/blog/growing-together/index.mdx
+++ b/src/content/blog/growing-together/index.mdx
@@ -10,13 +10,13 @@ import Column from '../../../components/Column.astro';
 
 ## 왜 '함께' 자라야 할까?
 
-많은 개발자가 성장을 고민한다. 더 나은 코드를 짜고 싶고, 더 어려운 문제를 해결하고 싶어 한다. 그런데 흔히 성장을 **'혼자만의 수련'**으로 생각하곤 한다.
+많은 개발자가 성장을 고민한다. 더 나은 코드를 짜고 싶고, 더 어려운 문제를 해결하고 싶어 한다. 그런데 흔히 성장을 혼자만의 수련으로 생각하곤 한다.
 
 "내가 실력을 쌓아서 팀에 기여해야지."
 
 훌륭한 태도지만, 여기엔 한 가지 함정이 있다. 소프트웨어 개발은 혼자 하는 게임이 아니라는 점이다. 복잡한 문제를 해결하려면 개인의 탁월함을 넘어 **팀의 상호작용**이 필수적이다. '함께 자라기'는 나 혼자 달인이 되는 것을 넘어, 우리가 함께 더 멀리 가기 위한 방법에 대한 이야기다.
 
-## 1. 나부터 자라기 (의도적 수련)
+## 나부터 자라기
 
 물론 팀이 함께 자라려면, 구성원 개개인이 성장할 준비가 되어 있어야 한다. 하지만 단순히 1만 시간 동안 일을 한다고 해서 달인이 되는 것은 아니다.
 
@@ -50,34 +50,6 @@ import Column from '../../../components/Column.astro';
 </Column>
 </Columns>
 
-### ABC 활동: 성장을 공유 가능한 형태로
-
-김창준 님의 <함께 자라기>에서는 업무를 A, B, C로 나눈다.
-
-- **A (업무)**: 기능을 구현하고 문서를 만드는 본질적인 일
-- **B (개선)**: A를 더 잘하기 위한 도구 제작, 자동화, 설계 변경
-- **C (투자)**: B를 더 잘하기 위한 회고, 학습, 프로세스 개선
-
-많은 사람이 A에만 몰두한다. 하지만 **개인은 B와 C를 통해 성장하고, 팀은 B와 C가 공유될 때 함께 자란다.** 내가 만든 자동화 스크립트(B)를 팀원이 쓰고, 나의 회고(C)를 통해 팀의 프로세스가 바뀔 때, 나의 성장은 팀의 성장이 된다.
-
-## 2. 함께 자라기 (협력과 신뢰)
-
-개인의 성장이 팀으로 연결되려면 무엇이 필요할까? 바로 **'내 것을 기꺼이 공유하는 태도'**와 그것을 받아주는 **'환경'**이다.
-
-### 협력: 1+1 > 2 만들기
-
-> "뛰어난 전문가 팀이 항상 최고의 성과를 내는 것은 아니다" - 구글 아리스토텔레스 프로젝트
-
-개인의 실력이 뛰어나도, 협력하지 않으면 그 팀의 퍼포먼스는 개인의 합보다 작아질 수 있다.
-
-**프로젝트 확률론**을 보자.
-작업자 한 명이 90% 확률로 성공한다면, 7명이 각자 완벽하게 성공해야 끝나는 프로젝트의 성공 확률은 **0.9^7 ≈ 48%** 에 불과하다.
-
-하지만 서로 돕는다면?
-누군가 막혔을 때 다른 사람이 도와줄 수 있다면(OR 조건), 실패 확률은 기하급수적으로 줄어들고 팀의 성공 확률은 99%에 가까워진다.
-
-이것이 우리가 **짝 프로그래밍(Pair Programming)**이나 **코드 리뷰**를 하는 진짜 이유다. 단순한 품질 관리가 아니라, 팀 전체의 성공 확률을 높이는 생존 전략인 것이다.
-
 <Columns>
 <Column>
 ![img_2.png](img_2.png)
@@ -87,11 +59,43 @@ import Column from '../../../components/Column.astro';
 </Column>
 </Columns>
 
+### ABC 활동: 성장을 공유 가능한 형태로
+
+함께 자라기에서는 업무를 A, B, C로 나눈다.
+
+- **A (업무)**: 기능을 구현하고 문서를 만드는 본질적인 일
+- **B (개선)**: A를 더 잘하기 위한 도구 제작, 자동화, 설계 변경
+- **C (투자)**: B를 더 잘하기 위한 회고, 학습, 프로세스 개선
+
+많은 사람이 A에만 몰두한다. 
+하지만 **개인은 B와 C를 통해 성장하고, 팀은 B와 C가 공유될 때 함께 자란다.** 
+내가 만든 자동화 스크립트(B)를 팀원이 쓰고, 나의 회고(C)를 통해 팀의 프로세스가 바뀔 때, 
+나의 성장은 팀의 성장이 된다.
+
+## 함께 자라기
+
+개인의 성장이 팀으로 연결되려면 무엇이 필요할까? 바로 내 것을 기꺼이 공유하는 태도와 그것을 받아주는 환경이다.
+
+### 협력: 1+1 > 2 만들기
+
+> 뛰어난 전문가 팀이 항상 최고의 성과를 내는 것은 아니다 - 구글 아리스토텔레스 프로젝트
+
+개인의 실력이 뛰어나도, 협력하지 않으면 그 팀의 퍼포먼스는 개인의 합보다 작아질 수 있다.
+
+**프로젝트 확률론**을 보자.
+작업자 한 명이 90% 확률로 성공한다면, 7명이 각자 완벽하게 성공해야 끝나는 프로젝트의 성공 확률은 **0.9^7 ≈ 48%** 에 불과하다.
+
+하지만 서로 돕는다면?
+누군가 막혔을 때 다른 사람이 도와줄 수 있다면(OR 조건), 실패 확률은 기하급수적으로 줄어들고 팀의 성공 확률은 99%에 가까워진다.
+
+이것이 우리가 짝 프로그래밍(Pair Programming)이나 코드 리뷰를 하는 진짜 이유다.  
+단순한 품질 관리가 아니라, 팀 전체의 성공 확률을 높이는 생존 전략인 것이다.
+
 ### 심리적 안전감: 실수를 드러낼 용기
 
-협력이 일어나려면 전제 조건이 있다. 바로 **심리적 안전감(Psychological Safety)**이다.
+협력이 일어나려면 전제 조건이 있다. 바로 **심리적 안전감**이다.
 
-"내가 이 질문을 하면 바보 취급 받지 않을까?"
+"내가 이 질문을 하면 바보 취급 받지 않을까?"  
 "내가 실수를 말하면 평가가 깎이지 않을까?"
 
 이런 불안이 있는 곳에서는 아무도 '수련(도전)'하지 않는다. 그저 안전한 '업무'만 하려 든다.
@@ -106,7 +110,7 @@ import Column from '../../../components/Column.astro';
 
 "기술적으로 이게 맞아요"라고 정답만 던지는 것은 상대를 변화시키지 못한다. 상대가 왜 그렇게 생각했는지(Context)를 묻고, 내 생각이 상대의 맥락에서 어떻게 받아들여질지 고민하는 **'삼투압적 소통'**이 필요하다.
 
-> "내가 전달하고 싶은 방식이 아니라, 상대에게 가장 잘 전달되는 방식은 무엇일까?"
+> 내가 전달하고 싶은 방식이 아니라, 상대에게 가장 잘 전달되는 방식은 무엇일까?
 
 이 질문을 던지는 순간, 우리는 진정으로 함께 자랄 준비가 된 것이다.
 
